--- a/wwr/index.html
+++ b/wwr/index.html
@@ -3,9 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>White Water Rafting | Rapids | Home</title>
 </head>
 <body>
-    
+    <header>
+        <a id = "logoLink" href = "index.html">
+            <img class = "logo" src = "images/crossedoars.jpeg" alt = "logo">
+        </a>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="#">Page 2</a>
+            <a href="sitePlanRafting.html">Site Plan</a>
+            <a href="contactus.html">Contact Us</a>
+        </nav>
+    </header>
 </body>
 </html>
