--- a/wwr/index.html
+++ b/wwr/index.html
@@ -4,68 +4,72 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>White Water Rafting | Rapids | Home</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    <header>
-        <a id = "logoLink" href = "index.html">
-            <img class = "logo" src = "images/crossedoars.jpeg" alt = "logo">
-        </a>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="#">Page 2</a>
-            <a href="sitePlanRafting.html">Site Plan</a>
-            <a href="contactus.html">Contact Us</a>
-        </nav>
-        <div class = "hero">
-            <div class = "heroBox">
-                <img class="heroImg" src="images/hero.png" alt="People enjoying White Water Rafting">
-            </div>
-            <section class = "heroMsg">
-                <h1 class="homeTitle">Have An Adventure</h1>
-                <h4>Make Memories with Us</h4>
-                <div class = buttonBox">
-                    <a class='book' href="contactus.html">Book Now</a>
+    <div id="content">
+        <header>
+            <a id = "logoLink" href = "index.html">
+                <img class = "logo" src = "images/crossedoars.jpeg" alt = "logo">
+            </a>
+            <nav>
+                <a href="index.html">Home</a>
+                <a href="#">Page 2</a>
+                <a href="sitePlanRafting.html" target="_blank">Site Plan</a>
+                <a href="contactus.html">Contact Us</a>
+            </nav>
+            <div class = "hero">
+                <div class = "heroBox">
+                    <img class="heroImg" src="images/hero.png" alt="People enjoying White Water Rafting">
                 </div>
+                <section class = "heroMsg">
+                    <h1 class="homeTitle">Have An Adventure</h1>
+                    <h4>Make Memories with Us</h4>
+                    <div class = buttonBox">
+                        <a class='book' href="contactus.html">Book Now</a>
+                    </div>
+                </section>
+            </div>
+        </header>
+        <main class="homeGrid">
+            <section class="riverCard">
+                <img class="cardImg" src="images/rivers.jpg" alt="river in forest">
+                <img src="images/riverIcon.png" alt="river icon" class="icon">
+                <h2>Rivers</h2>
             </section>
-        </div>
-    </header>
-    <main class="homeGrid">
-        <section class="riverCard">
-            <img class="cardImg" src="images/rivers.jpg" alt="river in forest">
-            <img src="images/riverIcon.png" alt="river icon" class="icon">
-            <h2>Rivers</h2>
-        </section>
-        <section class="campingCard">
-            <img class="cardImg" src="images/camping.jpg" alt="tent in mountons">
-            <img src="images/fireIcon.png" alt="fire icon" class="icon">
-            <h2>Camping</h2>
-        </section>
-        <section class="rapidsCard">
-            <img class="cardImg" src="images/rapids.jpg" alt="rafting boat">
-            <img src="images/oarsIcon.png" alt="ores icon" class="icon">
-            <h2>Rapids</h2>
-        </section>
-        <img class = "mountains" src="images/mountains.jpg" alt="Misty Mountains">
-        <section class="msg">
-            <h2>More Than Just The Thrill</h2>
-            <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors. </p>
-            <a class='join' href="rivers.html">Join Us</a>
-        </section>
-    </main>
-    <footer>
-        <p>Rapids &copy,2025 - Thomas Elbl </p>
-        <p><a href="sitePlanRafting.html">Site Plan</a></p>
-        <p><a href="contactus.html">Contact Us</a></p>
-        <div class="social">
-         <a href="https://facebook.com">
-              <img src="images/facebookIcon.png" alt="fb icon">
-         </a>
-         <a href="https://twitter.com">
-            <img src="images/twitterIcon.png" alt="twitter icon">
-         </a>
-         <a href="https://instagram.com">
-             <img src="images/instagramIcon.png" alt="instagram icon">
-         </a>
-    </footer>
+            <section class="campingCard">
+                <img class="cardImg" src="images/camping.jpg" alt="tent in mountons">
+                <img src="images/fireIcon.png" alt="fire icon" class="icon">
+                <h2>Camping</h2>
+            </section>
+            <section class="rapidsCard">
+                <img class="cardImg" src="images/rapids.jpg" alt="rafting boat">
+                <img src="images/oarsIcon.png" alt="ores icon" class="icon">
+                <h2>Rapids</h2>
+            </section>
+            <div id="background"></div>
+            <img class = "mountains" src="images/mountains.jpg" alt="Misty Mountains">
+            <section class="msg">
+                <h2>More Than Just The Thrill</h2>
+                <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors. </p>
+                <a class='join' href="rivers.html">Join Us</a>
+            </section>
+        </main>
+        <footer>
+            <p>Rapids &copy,2025 - Thomas Elbl </p>
+            <p><a href="sitePlanRafting.html">Site Plan</a></p>
+            <p><a href="contactus.html">Contact Us</a></p>
+            <div class="social">
+            <a href="https://facebook.com" target="_blank">
+                <img src="images/facebookIcon.png" alt="fb icon">
+            </a>
+            <a href="https://twitter.com" target="_blank">
+                <img src="images/twitterIcon.png" alt="twitter icon">
+            </a>
+            <a href="https://instagram.com" target="_blank">
+                <img src="images/instagramIcon.png" alt="instagram icon">
+            </a>
+        </footer>
+    </div>
 </body>
 </html>
