new file:   ice/shophome.html 	modified:   wwr/index.html 	modified:   wwr/styles/style.css

--- a/wwr/index.html
+++ b/wwr/index.html
@@ -18,19 +18,20 @@
                 <a href="sitePlanRafting.html" target="_blank">Site Plan</a>
                 <a href="contactus.html">Contact Us</a>
             </nav>
-            <div class = "hero">
-                <div class = "heroBox">
-                    <img class="heroImg" src="images/hero.png" alt="People enjoying White Water Rafting">
-                </div>
-                <section class = "heroMsg">
-                    <h1 class="homeTitle">Have An Adventure</h1>
-                    <h4>Make Memories with Us</h4>
-                    <div class = buttonBox">
-                        <a class='book' href="contactus.html">Book Now</a>
-                    </div>
-                </section>
-            </div>
+         
         </header>
+        <div class = "hero">
+            <div class = "heroBox">
+                <img class="heroImg" src="images/hero.png" alt="People enjoying White Water Rafting">
+            </div>
+            <section class = "heroMsg">
+                <h1 class="homeTitle">Have An Adventure</h1>
+                <h4>Make Memories with Us</h4>
+                <div class = buttonBox">
+                    <a class='book' href="contactus.html">Book Now</a>
+                </div>
+            </section>
+        </div>
         <main class="homeGrid">
             <section class="riverCard">
                 <img class="cardImg" src="images/rivers.jpg" alt="river in forest">
@@ -61,13 +62,13 @@
             <p><a href="contactus.html">Contact Us</a></p>
             <div class="social">
             <a href="https://facebook.com" target="_blank">
-                <img src="images/facebookIcon.png" alt="fb icon">
+                <img class="icon" src="images/facebookIcon.png" alt="fb icon">
             </a>
             <a href="https://twitter.com" target="_blank">
-                <img src="images/twitterIcon.png" alt="twitter icon">
+                <img class="icon" src="images/twitterIcon.png" alt="twitter icon">
             </a>
             <a href="https://instagram.com" target="_blank">
-                <img src="images/instagramIcon.png" alt="instagram icon">
+                <img class="icon" src="images/instagramIcon.png" alt="instagram icon">
             </a>
         </footer>
     </div>
