modified:   wwr/index.html

--- a/wwr/index.html
+++ b/wwr/index.html
@@ -27,7 +27,7 @@
             <section class = "heroMsg">
                 <h1 class="homeTitle">Have An Adventure</h1>
                 <h4>Make Memories with Us</h4>
-                <div class = buttonBox">
+                <div class = "buttonBox">
                     <a class='book' href="contactus.html">Book Now</a>
                 </div>
             </section>
@@ -57,19 +57,20 @@
             </section>
         </main>
         <footer>
-            <p>Rapids &copy,2025 - Thomas Elbl </p>
+            <p>Rapids &copy; 2025 - Thomas Elbl </p>
             <p><a href="sitePlanRafting.html">Site Plan</a></p>
             <p><a href="contactus.html">Contact Us</a></p>
             <div class="social">
-            <a href="https://facebook.com" target="_blank">
-                <img class="icon" src="images/facebookIcon.png" alt="fb icon">
-            </a>
-            <a href="https://twitter.com" target="_blank">
-                <img class="icon" src="images/twitterIcon.png" alt="twitter icon">
-            </a>
-            <a href="https://instagram.com" target="_blank">
-                <img class="icon" src="images/instagramIcon.png" alt="instagram icon">
-            </a>
+                <a href="https://facebook.com" target="_blank">
+                    <img class="icon" src="images/facebookIcon.png" alt="fb icon">
+                </a>
+                <a href="https://twitter.com" target="_blank">
+                    <img class="icon" src="images/twitterIcon.png" alt="twitter icon">
+                </a>
+                <a href="https://instagram.com" target="_blank">
+                    <img class="icon" src="images/instagramIcon.png" alt="instagram icon">
+                </a>
+            </div>
         </footer>
     </div>
 </body>
